--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,4 +3,4 @@
 A Cache using futures to defend against thundering herds.
 
 The cache borrows heavily from the concepts, and implementation 
-of caching in link:http://spray.io/documentation/1.2.1/spray-caching/[spray-caching 
+of caching in http://spray.io/documentation/1.2.1/spray-caching/[spray-caching]
